table td valign fix

--- a/app/webroot/css/styles.css
+++ b/app/webroot/css/styles.css
@@ -85,6 +85,7 @@ table.table-index td {
 	padding: 4px 8px;
 	border-style: solid;
 	border-color: #909195;
+	vertical-align: middle;
 }
 table.table-index td a:hover {
 font-weight:normal;
